--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kross | Portfolio Template</title>
+  <title>UI101 | Portfolio Template</title>
   <base href="https://shivamptl23.github.io/uidesign101/">
 
   <!-- mobile responsive meta -->
