--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>UI101 | Portfolio Template</title>
-  <base href="https://shivamptl23.github.io/uidesign101/">
+  <title>UIDesign101 | Portfolio Template</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
