--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-11 mx-auto">
-        <h1 class="text-white font-tertiary">Hi! I’m <br> Shiva <br> UX designer</h1>
+        <h1 class="text-white font-tertiary">Hi! I’m <br> Shivam <br> UX designer</h1>
       </div>
     </div>
   </div>
